--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -1,7 +1,35 @@
 nav.navigation-footer {
-    background-color: var(--blue-color);
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1rem;
 
-    & nav {
-        display: flex;
+    margin-top: 4rem;
+    padding: 2rem;
+    background-color: var(--blue-light-color);
+
+    & ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    & li {
+        margin-bottom: 10px;
+
+        &:first-child a {
+            font-family: 'TUIType-Bold';
+            font-size: 2rem;
+            color: var(--red-color);
+        }
+    }
+
+    & a {
+        text-decoration: none;
+        transition: all ease 0.2s;
+
+        &:hover {
+            color: var(--gray-color);
+            text-decoration: underline;
+        }
     }
 }
