--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,6 @@
 @import './color-scheme';
 @import './footer';
+@import './font-storage';
 @import './header';
 @import './icons';
 @import './variables';
@@ -17,10 +18,21 @@ h2,
 h3,
 h4,
 p,
-a {
-    font-family: Arial, Verdana, sans-serif;
+a,
+form,
+button {
+    font-family: 'TUIType', Arial, Verdana, sans-serif;
     text-decoration: none;
     color: var(--blue-dark-color);
+}
+
+button {
+    font-family: 'TUIType-Bold';
+    font-size: 1rem;
+}
+
+h2 {
+    text-transform: uppercase;
 }
 
 #searching {
@@ -32,6 +44,78 @@ a {
     & img {
         width: 100vw;
         height: 220px;
-        background-size: cover;
+        object-fit: cover;
     }
 }
+
+#searching .search {
+    // background-color: var(--blue-color);
+
+    & ul {
+        display: flex;
+        
+    }
+
+    & li {
+        padding: 1rem 2rem;
+        background-color: var(--blue-light-color);
+        transition: all ease 0.2s;
+
+        &:hover {
+            background-color: var(--blue-color);
+        }
+
+        a {
+            font-family: 'TUIType-Regular';
+            text-transform: uppercase;
+        }
+    }
+
+    & li:first-child {
+        background-color: var(--blue-color);
+
+        a {
+            color: var(--red-color);
+            border-bottom: 2px solid var(--red-color);
+        }
+    }
+}
+
+form {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 1rem;
+    max-width: 1500px;
+
+    margin: 0 auto;
+    padding: 1rem;
+    background-color: var(--blue-color);
+    border-radius: 5px;
+
+    & label {
+        display: block;
+        margin-bottom: 5px;
+        font-weight: bold;
+      }
+      
+      & input[type="text"] {
+        display: block;
+        width: 100%;
+        height: 50px;
+        padding: 10px;
+        border: 2px solid var(--gray-light-color);
+        border-radius: 10px;
+        outline: none;
+      }
+      
+      & button {
+        width: 100%;
+        height: 50px;
+        padding: 1rem;
+    
+        color: var(--white-color);
+        background-color: var(--red-color);
+        border-radius: 10px;
+        cursor: pointer;
+      }
+  }
