--- a/css/_header.scss
+++ b/css/_header.scss
@@ -11,28 +11,58 @@ nav.navigation-header {
 
     z-index: 1;
 
-    & ul {
-        margin-left: auto;
+    ul {
+        padding: 0;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
     }
 
-    & li {
-        display: inline-block;
-        padding: 0rem 2rem;
+    li {
+        display: inline-flex;
+        align-items: center;
         vertical-align: middle;
+        background-color: var(--blue-color);
+        transition: all ease 0.2s;
+        padding: 1rem 2rem;
+        vertical-align: center;
+        height: 70px;
+        overflow-y: hidden;
+
+
+        &:first-child {
+            padding: 0;
+        }
+
+        &:hover {
+            background-color: var(--blue-light-color);
+        }
+
+        &:hover:first-child {
+            background-color: var(--blue-color);
+        }
+
+        a {
+            font-family: 'TUIType-Regular';
+        }
     }
 
-    & .logo {
+    .logo {
         width: 3rem;
     }
 
-    & .flag {
+    .flag {
         width: 1rem;
         height: 1rem;
         border-radius: 50%;
     }
 
-    & span {
+    span {
         vertical-align: middle;
         margin-right: 8px;
+    }
+    
+    ul li:first-child {
+        margin-right: auto;
     }
 }
