--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,9 @@
 
 nav.navigation-footer {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 1rem;
+  position: relative;
   margin-top: 4rem;
   padding: 2rem;
   background-color: var(--blue-light-color);
@@ -23,6 +24,9 @@ nav.navigation-footer ul {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+nav.navigation-footer ul li:first-child {
+  display: block;
 }
 nav.navigation-footer li {
   margin-bottom: 10px;
@@ -33,12 +37,54 @@ nav.navigation-footer li:first-child a {
   color: var(--red-color);
 }
 nav.navigation-footer a {
-  text-decoration: none;
   transition: all ease 0.2s;
 }
 nav.navigation-footer a:hover {
   color: var(--gray-color);
-  text-decoration: underline;
+}
+nav.navigation-footer img {
+  width: 30px;
+  height: auto;
+  display: inline;
+}
+nav.navigation-footer button {
+  background-color: var(--blue-color);
+  transition: all ease 0.3s;
+}
+nav.navigation-footer button:hover {
+  background-color: var(--blue-dark-color);
+}
+nav.navigation-footer button img {
+  height: 15px;
+}
+nav.navigation-footer .nieuwsbrief p {
+  margin-bottom: 1.5rem;
+}
+
+.img-horizontal li {
+  display: inline-block;
+}
+
+#footerbar {
+  background-color: var(--blue-color);
+  padding: 1.2rem;
+  text-align: right;
+  position: relative;
+}
+#footerbar .awards {
+  width: 200px;
+  height: auto;
+  position: absolute;
+  margin: auto auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+#footerbar img {
+  height: 1.5rem;
+  margin-right: 1.5rem;
+  transition: all ease 0.3s;
 }
 
 /* -- AMBIT FONT --*/
@@ -95,12 +141,33 @@ nav.navigation-header {
   z-index: 1;
 }
 nav.navigation-header ul {
-  margin-left: auto;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 nav.navigation-header li {
-  display: inline-block;
-  padding: 0rem 2rem;
+  display: inline-flex;
+  align-items: center;
   vertical-align: middle;
+  background-color: var(--blue-color);
+  transition: all ease 0.2s;
+  padding: 1rem 2rem;
+  vertical-align: center;
+  height: 70px;
+  overflow-y: hidden;
+}
+nav.navigation-header li:first-child {
+  padding: 0;
+}
+nav.navigation-header li:hover {
+  background-color: var(--blue-light-color);
+}
+nav.navigation-header li:hover:first-child {
+  background-color: var(--blue-color);
+}
+nav.navigation-header li a {
+  font-family: "TUIType-Regular";
 }
 nav.navigation-header .logo {
   width: 3rem;
@@ -113,6 +180,9 @@ nav.navigation-header .flag {
 nav.navigation-header span {
   vertical-align: middle;
   margin-right: 8px;
+}
+nav.navigation-header ul li:first-child {
+  margin-right: auto;
 }
 
 .material-symbols-outlined {
@@ -132,18 +202,40 @@ h1,
 h2,
 h3,
 h4,
-p,
+button {
+  font-family: "Ambit-Bold", Arial, Verdana, sans-serif;
+  text-decoration: none;
+  color: var(--blue-dark-color);
+}
+
 a,
 form,
-button {
-  font-family: "TUIType", Arial, Verdana, sans-serif;
+label {
+  font-family: "Ambit-Regular", Arial, Verdana, sans-serif;
   text-decoration: none;
+  color: var(--blue-dark-color);
+}
+
+p {
+  font-family: "TUIType-Regular", Arial, Verdana, sans-serif;
   color: var(--blue-dark-color);
 }
 
 button {
   font-family: "TUIType-Bold";
-  font-size: 1rem;
+  font-size: 1.2rem;
+  padding: 1rem 1.5rem;
+  background-color: var(--red-color);
+  color: var(--white-color);
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
 }
 
 h2 {
@@ -151,6 +243,7 @@ h2 {
 }
 
 #searching {
+  display: grid;
   width: 100vw;
   height: auto;
   position: relative;
@@ -163,8 +256,15 @@ h2 {
      object-fit: cover;
 }
 
+#searching .search {
+  width: 95%;
+  max-width: 1500px;
+  margin: auto auto;
+  margin-top: -7rem;
+}
 #searching .search ul {
   display: flex;
+  margin-bottom: 0.5rem;
 }
 #searching .search li {
   padding: 1rem 2rem;
@@ -175,7 +275,7 @@ h2 {
   background-color: var(--blue-color);
 }
 #searching .search li a {
-  font-family: "TUIType-Regular";
+  font-family: "TUIType-Bold";
   text-transform: uppercase;
 }
 #searching .search li:first-child {
@@ -190,18 +290,13 @@ form {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-gap: 1rem;
-  max-width: 1500px;
   margin: 0 auto;
   padding: 1rem;
   background-color: var(--blue-color);
-  border-radius: 5px;
+  border-radius: 10px;
 }
-form label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
-}
-form input[type=text] {
+
+input[type=text] {
   display: block;
   width: 100%;
   height: 50px;
@@ -210,12 +305,148 @@ form input[type=text] {
   border-radius: 10px;
   outline: none;
 }
-form button {
-  width: 100%;
+
+label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 50px;
   padding: 1rem;
   color: var(--white-color);
   background-color: var(--red-color);
   border-radius: 10px;
   cursor: pointer;
+  align-self: end;
+  transition: all ease 0.3s;
+}
+button:hover {
+  background-color: var(--blue-dark-color);
+}
+button .material-symbols-outlined {
+  color: var(--white-color);
+  margin-right: 0.5rem;
+}
+
+#searching .vakantietypes {
+  text-align: center;
+  background-color: var(--white-color);
+  margin-top: 1rem;
+}
+#searching .vakantietypes ul {
+  display: flex;
+  justify-content: center;
+}
+#searching .vakantietypes li {
+  display: inline-block;
+  margin: 0rem 1rem;
+}
+#searching .vakantietypes li a:hover {
+  text-decoration: none;
+}
+#searching .vakantietypes li .type {
+  font-family: "TUIType-Bold";
+  font-size: 18px;
+}
+#searching .vakantietypes li .number {
+  font-size: 12px;
+  color: var(--gray-color);
+}
+#searching .vakantietypes span {
+  display: block;
+}
+#searching .vakantietypes .line {
+  width: 95%;
+  height: 2px;
+  max-width: 1500px;
+  margin: auto;
+  margin-top: 1rem;
+  background-color: var(--gray-light-color);
+  display: block;
+}
+
+#resultaten {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  max-width: 1500px;
+  margin: auto;
+  position: relative;
+  margin-top: 3rem;
+}
+#resultaten h2 {
+  text-align: center;
+  flex-basis: 100%;
+  margin-bottom: 1.5rem;
+}
+#resultaten h2 span {
+  display: block;
+  font-size: 1rem;
+  color: var(--red-color);
+}
+#resultaten .filters {
+  background-color: blue;
+  width: 400px;
+}
+#resultaten .filters h3 {
+  padding: 1rem;
+  background-color: var(--blue-light-color);
+}
+#resultaten .filters article {
+  background-color: var(--gray-light-color);
+}
+#resultaten .filters article p {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+#resultaten .filters article .slider-container {
+  padding: 1rem;
+}
+#resultaten .filters article .slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 10px;
+  background-color: #ddd;
+  border-radius: 10px;
+  outline: none;
+  margin-bottom: 1rem;
+}
+#resultaten .filters article .slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  background-color: #2196F3;
+  border-radius: 50%;
+  cursor: pointer;
+}
+#resultaten .filters article .slider::-moz-range-thumb {
+  width: 20px;
+  height: 20px;
+  background-color: #2196F3;
+  border-radius: 50%;
+  cursor: pointer;
+}
+#resultaten .filters article .slider-labels {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+#resultaten .filters article .slider-labels span {
+  flex: 1;
+  text-align: center;
+  font-size: 0.8rem;
+  color: #999;
+}
+#resultaten .vakantie-resultaten {
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(min(50%, 300px), 1fr));
+  gap: 1rem;
+  background-color: red;
 }/*# sourceMappingURL=style.css.map */
