--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 :root {
   --blue-color: #74CEF2;
   --blue-light-color: #C3E6F9;
@@ -159,6 +160,11 @@ nav.navigation-header li {
 }
 nav.navigation-header li:first-child {
   padding: 0;
+  position: absolute;
+  left: 2rem;
+}
+nav.navigation-header li:last-child {
+  margin-right: 1rem;
 }
 nav.navigation-header li:hover {
   background-color: var(--blue-light-color);
@@ -199,24 +205,26 @@ nav.navigation-header ul li:first-child {
 }
 
 h1,
-h2,
-h3,
-h4,
+label,
 button {
   font-family: "Ambit-Bold", Arial, Verdana, sans-serif;
   text-decoration: none;
   color: var(--blue-dark-color);
 }
 
+h2,
+h3,
+h4,
 a,
-form,
-label {
+form {
   font-family: "Ambit-Regular", Arial, Verdana, sans-serif;
   text-decoration: none;
   color: var(--blue-dark-color);
 }
 
-p {
+p,
+select,
+span {
   font-family: "TUIType-Regular", Arial, Verdana, sans-serif;
   color: var(--blue-dark-color);
 }
@@ -261,6 +269,7 @@ h2 {
   max-width: 1500px;
   margin: auto auto;
   margin-top: -7rem;
+  position: relative;
 }
 #searching .search ul {
   display: flex;
@@ -285,6 +294,16 @@ h2 {
   color: var(--red-color);
   border-bottom: 2px solid var(--red-color);
 }
+#searching .search h1 {
+  font-size: 2rem;
+  position: absolute;
+  right: 0.5rem;
+  top: 1rem;
+}
+#searching .search h1 span {
+  font-family: "TUIType-Bold";
+  color: var(--red-color);
+}
 
 form {
   display: grid;
@@ -296,20 +315,25 @@ form {
   border-radius: 10px;
 }
 
-input[type=text] {
+input[type=text],
+select {
   display: block;
   width: 100%;
   height: 50px;
   padding: 10px;
+  background-color: var(--white-color);
   border: 2px solid var(--gray-light-color);
   border-radius: 10px;
   outline: none;
 }
 
+input[type=checkbox]:checked {
+  background-color: var(--blue-color);
+}
+
 label {
   display: block;
   margin-bottom: 5px;
-  font-weight: bold;
 }
 
 button {
@@ -341,6 +365,7 @@ button .material-symbols-outlined {
 #searching .vakantietypes ul {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 #searching .vakantietypes li {
   display: inline-block;
@@ -350,7 +375,6 @@ button .material-symbols-outlined {
   text-decoration: none;
 }
 #searching .vakantietypes li .type {
-  font-family: "TUIType-Bold";
   font-size: 18px;
 }
 #searching .vakantietypes li .number {
@@ -374,10 +398,25 @@ button .material-symbols-outlined {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  position: relative;
   max-width: 1500px;
   margin: auto;
   position: relative;
   margin-top: 3rem;
+}
+#resultaten ul.breadcrumbs {
+  display: inline-flex;
+  flex-basis: 100%;
+  margin-bottom: 0.5rem;
+}
+#resultaten ul.breadcrumbs li {
+  display: inline-block;
+  background-color: var(--gray-light-color);
+  padding: 0.5rem 1rem;
+}
+#resultaten ul.breadcrumbs li a {
+  display: flex;
+  align-items: center;
 }
 #resultaten h2 {
   text-align: center;
@@ -390,15 +429,19 @@ button .material-symbols-outlined {
   color: var(--red-color);
 }
 #resultaten .filters {
-  background-color: blue;
   width: 400px;
-}
-#resultaten .filters h3 {
-  padding: 1rem;
-  background-color: var(--blue-light-color);
 }
 #resultaten .filters article {
   background-color: var(--gray-light-color);
+  margin-bottom: 1.5rem;
+  /* slider related */
+}
+#resultaten .filters article h3 {
+  padding: 1rem;
+  background-color: var(--blue-light-color);
+}
+#resultaten .filters article h3 span:last-child {
+  float: right;
 }
 #resultaten .filters article p {
   text-align: center;
@@ -408,10 +451,9 @@ button .material-symbols-outlined {
   padding: 1rem;
 }
 #resultaten .filters article .slider {
-  -webkit-appearance: none;
   width: 100%;
   height: 10px;
-  background-color: #ddd;
+  background-color: var(--blue-light-color);
   border-radius: 10px;
   outline: none;
   margin-bottom: 1rem;
@@ -421,32 +463,212 @@ button .material-symbols-outlined {
   appearance: none;
   width: 20px;
   height: 20px;
-  background-color: #2196F3;
+  background-color: var(--yellow-color);
+  border: none;
   border-radius: 50%;
   cursor: pointer;
 }
 #resultaten .filters article .slider::-moz-range-thumb {
   width: 20px;
   height: 20px;
-  background-color: #2196F3;
+  background-color: var(--yellow-color);
+  border: none;
   border-radius: 50%;
   cursor: pointer;
 }
 #resultaten .filters article .slider-labels {
   display: flex;
-  justify-content: space-between;
-  width: 100%;
+  justify-content: space-evenly;
 }
 #resultaten .filters article .slider-labels span {
   flex: 1;
   text-align: center;
   font-size: 0.8rem;
-  color: #999;
+  font-family: "TUIType-Bold";
+}
+#resultaten .filters article .max-price {
+  padding: 1rem;
+}
+#resultaten .filters article .max-price select {
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+#resultaten .filters article .checkboxes {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+#resultaten .filters article .checkboxes div {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 0.5rem;
+}
+#resultaten .filters article .checkboxes input {
+  display: inline-block;
+  margin: 0;
+}
+#resultaten .filters article .checkboxes label {
+  font-family: "Ambit-Regular";
+  margin: 0 5px 0 10px;
+}
+#resultaten .filters article .checkboxes .meer {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+  transition: all ease 0.3s;
+}
+#resultaten .filters article .checkboxes .meer:hover,
+#resultaten .filters article .checkboxes .meer span:hover {
+  color: var(--blue-color);
+  text-decoration: none;
+}
+#resultaten .filters article .checkboxes .meer span {
+  transition: all ease 0.3s;
+}
+#resultaten .filters article .checkboxes .meer span:hover {
+  color: var(--blue-color);
+  transform: rotate(180deg);
+}
+#resultaten .filters article .checkboxes .info-icon {
+  display: inline-block;
+  text-decoration: none;
+  cursor: help;
+  transition: all ease 0.3s;
+}
+#resultaten .filters article .checkboxes .info-icon span {
+  color: var(--gray-color);
+}
+#resultaten .filters article .checkboxes .info-icon:hover:before {
+  content: attr(title);
+  display: block;
+  position: absolute;
+  padding: 0.5rem;
+  background-color: var(--white-color);
+  color: var(--dark-blue-color);
+  font-size: 0.8rem;
+  border-radius: 0.25rem;
+  z-index: 1;
+  box-shadow: 1px 1px 3px black;
+  transition: opacity 0.3s ease;
+}
+#resultaten .filters article .checkboxes-flight {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: baseline;
+}
+#resultaten .filters article .checkboxes-flight .left div {
+  font-size: 14px;
+  padding-left: 1rem;
+}
+#resultaten .filters article .checkboxes-flight .left div:first-child {
+  font-size: 1rem;
+  padding-left: 0;
+}
+#resultaten .filters article .checkboxes-flight .left,
+#resultaten .filters article .checkboxes-flight .right {
+  width: 50%;
+}
+#resultaten .filters article .checkboxes-flight .right div {
+  width: 100%;
 }
 #resultaten .vakantie-resultaten {
-  padding: 1rem;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(min(50%, 300px), 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(min(50%, 325px), 1fr));
   gap: 1rem;
-  background-color: red;
+  flex: 1;
+  padding: 0rem 1rem;
+}
+#resultaten .vakantie-resultaten article {
+  position: relative;
+  border: solid 2px var(--gray-light-color);
+  border-radius: 10px;
+}
+#resultaten .vakantie-resultaten article .overlay-image {
+  display: flex;
+  flex-wrap: wrap;
+  position: absolute;
+  width: 100%;
+  height: 325px;
+}
+#resultaten .vakantie-resultaten article .overlay-image .logo {
+  width: 50px;
+  height: 50px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+#resultaten .vakantie-resultaten article .overlay-image .label {
+  padding: 1rem;
+  color: var(--white-color);
+  background-color: var(--red-color);
+  height: 50px;
+}
+#resultaten .vakantie-resultaten article .overlay-image span.heart {
+  color: var(--blue-dark-color);
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: 10px;
+  font-size: 2rem;
+}
+#resultaten .vakantie-resultaten article .overlay-image span.circle {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  color: var(--white-color);
+  font-size: 1.2rem;
+}
+#resultaten .vakantie-resultaten article img {
+  height: 325px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+#resultaten .vakantie-resultaten article p {
+  display: flex;
+  align-items: center;
+}
+#resultaten .vakantie-resultaten article a {
+  font-family: "TUIType-Regular";
+}
+#resultaten .vakantie-resultaten article ul {
+  padding: 1rem;
+  margin-top: 2rem;
+  background-color: var(--gray-light-color);
+}
+#resultaten .vakantie-resultaten article ul li {
+  font-family: "Ambit-Bold";
+  padding: 0.2rem 0rem;
+}
+#resultaten .vakantie-resultaten article ul li span {
+  font-family: "Ambit-Regular";
+}
+#resultaten .vakantie-resultaten article button {
+  width: 100%;
+  background-color: var(--yellow-color);
+  border-radius: 0px 0px 10px 10px;
+}
+#resultaten .vakantie-resultaten article button:hover {
+  background-color: var(--blue-dark-color);
+}
+#resultaten .vakantie-resultaten article .information {
+  padding: 1rem;
+}
+#resultaten .vakantie-resultaten article span.price {
+  font-size: 1.7rem;
+  font-family: "TUIType-Bold";
+  color: var(--red-color);
+  margin-right: 1.5rem;
+}
+#resultaten .vakantie-resultaten article span.price:before {
+  content: "€";
+}
+#resultaten .vakantie-resultaten article span.grade {
+  font-size: 1.5rem;
+  font-family: "TUIType-Bold";
+  margin-right: 5px;
+}
+#resultaten .vakantie-resultaten article span.grade:after {
+  font-size: 1rem;
+  content: "/10";
+}
+#resultaten .vakantie-resultaten article .star {
+  margin-right: 0rem;
 }/*# sourceMappingURL=style.css.map */
