--- a/css/style.scss
+++ b/css/style.scss
@@ -14,24 +14,26 @@
 }
 
 h1,
-h2,
-h3,
-h4,
+label,
 button {
     font-family: 'Ambit-Bold', Arial, Verdana, sans-serif;
     text-decoration: none;
     color: var(--blue-dark-color);
 }
 
+h2,
+h3,
+h4,
 a,
-form,
-label {
+form {
     font-family: 'Ambit-Regular', Arial, Verdana, sans-serif;
     text-decoration: none;
     color: var(--blue-dark-color);
 }
 
-p {
+p,
+select,
+span {
     font-family: 'TUIType-Regular', Arial, Verdana, sans-serif;
     color: var(--blue-dark-color);
 }
@@ -78,6 +80,7 @@ h2 {
     max-width: 1500px;
     margin: auto auto;
     margin-top: -7rem;
+    position: relative;
 
     ul {
         display: flex;
@@ -107,6 +110,18 @@ h2 {
             border-bottom: 2px solid var(--red-color);
         }
     }
+
+    h1 {
+        font-size: 2rem;
+        position: absolute;
+        right: 0.5rem;
+        top: 1rem;
+
+        span {
+            font-family: 'TUIType-Bold';
+            color: var(--red-color);
+        }
+    }
 }
 
 form {
@@ -120,20 +135,26 @@ form {
     border-radius: 10px;
 }
 
-input[type="text"] {
+input[type="text"],
+select {
     display: block;
     width: 100%;
     height: 50px;
     padding: 10px;
+
+    background-color: var(--white-color);
     border: 2px solid var(--gray-light-color);
     border-radius: 10px;
     outline: none;
 }
 
+input[type="checkbox"]:checked {
+    background-color: var(--blue-color);
+}
+
 label {
     display: block;
     margin-bottom: 5px;
-    font-weight: bold;
 }
 
 button {
@@ -171,6 +192,7 @@ button {
     ul {
         display: flex;
         justify-content: center;
+        align-items: center;
     }
 
     li {
@@ -182,7 +204,6 @@ button {
         }
 
         .type {
-            font-family: 'TUIType-Bold';
             font-size: 18px;
         }
 
@@ -212,11 +233,29 @@ button {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    position: relative;
 
     max-width: 1500px;
     margin: auto;
     position: relative;
     margin-top: 3rem;
+
+    ul.breadcrumbs {
+        display: inline-flex;
+        flex-basis: 100%;
+        margin-bottom: 0.5rem;
+
+        li {
+            display: inline-block;
+            background-color: var(--gray-light-color);
+            padding: 0.5rem 1rem;
+
+            a {
+                display: flex;
+                align-items: center;
+            }
+        }
+    }
 
     h2 {
         text-align: center;
@@ -231,74 +270,302 @@ button {
     }
 
     .filters {
-        background-color: blue;
         width: 400px;
-
-        h3 {
-            padding: 1rem;
-            background-color: var(--blue-light-color);
-        }
 
         article {
             background-color: var(--gray-light-color);
+            margin-bottom: 1.5rem;
+
+            h3 {
+                padding: 1rem;
+                background-color: var(--blue-light-color);
+
+                span:last-child {
+                    float: right;
+                }
+            }
 
             p {
                 text-align: center;
                 margin-bottom: 1rem;
             }
 
+            /* slider related */
+
             .slider-container {
                 padding: 1rem;
             }
-    
+
             .slider {
-                -webkit-appearance: none;
                 width: 100%;
                 height: 10px;
-                background-color: #ddd;
+                background-color: var(--blue-light-color);
+
                 border-radius: 10px;
                 outline: none;
                 margin-bottom: 1rem;
-              }
-    
-              .slider::-webkit-slider-thumb {
+            }
+
+            .slider::-webkit-slider-thumb {
                 -webkit-appearance: none;
                 appearance: none;
                 width: 20px;
                 height: 20px;
-                background-color: #2196F3;
+                background-color: var(--yellow-color);
+
+                border: none;
                 border-radius: 50%;
                 cursor: pointer;
-              }
-              
-              .slider::-moz-range-thumb {
+            }
+
+            .slider::-moz-range-thumb {
                 width: 20px;
                 height: 20px;
-                background-color: #2196F3;
+                background-color: var(--yellow-color);
+
+                border: none;
                 border-radius: 50%;
                 cursor: pointer;
-              }
-              
-              .slider-labels {
+            }
+
+            .slider-labels {
                 display: flex;
-                justify-content: space-between;
-                width: 100%;
-              }
-              
-              .slider-labels span {
+                justify-content: space-evenly;
+            }
+
+            .slider-labels span {
                 flex: 1;
                 text-align: center;
                 font-size: 0.8rem;
-                color: #999;
-              }
+                font-family: 'TUIType-Bold';
+            }
+
+            .max-price {
+                padding: 1rem;
+
+                select {
+                    font-size: 1rem;
+                    margin-bottom: 1rem;
+                }
+            }
+
+            .checkboxes {
+                display: grid;
+                grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+
+                div {
+                    display: flex;
+                    flex-wrap: wrap;
+                    align-items: center;
+                    padding: 0.5rem;
+                }
+
+                input {
+                    display: inline-block;
+                    margin: 0;
+                }
+
+                label {
+                    font-family: 'Ambit-Regular';
+                    margin: 0 5px 0 10px;
+                }
+
+                .meer {
+                    display: flex;
+                    align-items: center;
+                    margin-bottom: 1rem;
+                    transition: all ease 0.3s;
+
+                    &:hover,
+                    span:hover {
+                        color: var(--blue-color);
+                        text-decoration: none;
+                    }
+
+                    span {
+                        transition: all ease 0.3s;
+                    }
+
+                    span:hover {
+                        color: var(--blue-color);
+                        transform: rotate(180deg);
+                    }
+                }
+
+                .info-icon {
+                    display: inline-block;
+                    text-decoration: none;
+                    cursor: help;
+                    transition: all ease 0.3s;
+
+                    span {
+                        color: var(--gray-color);
+                    }
+                }
+
+                .info-icon:hover:before {
+                    content: attr(title);
+                    display: block;
+                    position: absolute;
+                    padding: 0.5rem;
+
+                    background-color: var(--white-color);
+                    color: var(--dark-blue-color);
+                    font-size: 0.8rem;
+                    border-radius: 0.25rem;
+
+                    z-index: 1;
+                    box-shadow: 1px 1px 3px black;
+                    transition: opacity 0.3s ease;
+                }
+            }
+
+            .checkboxes-flight {
+                display: flex;
+                flex-wrap: wrap;
+                align-items: baseline;
+
+                .left div {
+                    font-size: 14px;
+                    padding-left: 1rem;
+
+                    &:first-child {
+                        font-size: 1rem;
+                        padding-left: 0;
+                    }
+                }
+
+                .left,
+                .right {
+                    width: 50%;
+                }
+
+                .right div {
+                    width: 100%;
+                }
+            }
         }
     }
 
     .vakantie-resultaten {
-        padding: 1rem;
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(min(50%, 300px), 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(min(50%, 325px), 1fr));
         gap: 1rem;
-        background-color: red;
+
+        flex: 1;
+        padding: 0rem 1rem;
+
+        article {
+            position: relative;
+            border: solid 2px var(--gray-light-color);
+            border-radius: 10px;
+
+            .overlay-image {
+                display: flex;
+                flex-wrap: wrap;
+                position: absolute;
+                width: 100%;
+                height: 325px;
+
+                .logo {
+                    width: 50px;
+                    height: 50px;
+                    object-fit: cover;
+                }
+
+                .label {
+                    padding: 1rem;
+                    color: var(--white-color);
+                    background-color: var(--red-color);
+                    height: 50px;
+                }
+
+                span.heart {
+                    color: var(--blue-dark-color);
+                    margin-top: 10px;
+                    margin-left: auto;
+                    margin-right: 10px;
+                    font-size: 2rem;
+                }
+
+                span.circle {
+                    position: absolute;
+                    bottom: 10px;
+                    left: 50%;
+                    color: var(--white-color);
+                    font-size: 1.2rem;
+                }
+            }
+
+            img {
+                height: 325px;
+                object-fit: cover;
+            }
+
+            p {
+                display: flex;
+                align-items: center;
+            }
+
+            a {
+                font-family: 'TUIType-Regular';
+            }
+
+            ul {
+                padding: 1rem;
+                margin-top: 2rem;
+                background-color: var(--gray-light-color);
+
+                li {
+                    font-family: 'Ambit-Bold';
+                    padding: 0.2rem 0rem;
+
+                    span {
+                        font-family: 'Ambit-Regular';
+                    }
+                }
+            }
+
+            button {
+                width: 100%;
+                background-color: var(--yellow-color);
+                border-radius: 0px 0px 10px 10px;
+
+                &:hover {
+                    background-color: var(--blue-dark-color);
+                }
+            }
+
+            .information {
+                padding: 1rem;
+            }
+
+            span.price {
+                font-size: 1.7rem;
+                font-family: 'TUIType-Bold';
+                color: var(--red-color);
+                margin-right: 1.5rem;
+
+                &:before {
+                    content: '\20AC';
+                }
+            }
+
+            span.grade {
+                font-size: 1.5rem;
+                font-family: 'TUIType-Bold';
+                margin-right: 5px;
+
+                &:after {
+                    font-size: 1rem;
+                    content: '/10';
+                }
+            }
+
+            .star {
+                margin-right: 0rem;
+            }
+
+        }
     }
 }
