--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -1,6 +1,7 @@
 nav.navigation-footer {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-rows: repeat(4, auto);
     gap: 1rem;
     position: relative;
 
